image overflow on slider fixed

--- a/mkdcore/custom/assets/css/frontend_style.css
+++ b/mkdcore/custom/assets/css/frontend_style.css
@@ -468,6 +468,8 @@ img {
 /* Hide the images by default */
 .mySlides {
   display: none;
+  overflow: hidden;
+  height: 100%;
 }
 
 /* Add a pointer when hovering over the thumbnail images */
